[package]
name = "kaspa-python-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
faster-hex = "0.9.0"
futures = "0.3.31"
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "4826b38" }
kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "4826b38" }
kaspa-consensus-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "4826b38" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "4826b38" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "4826b38" }
kaspa-notify = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "4826b38" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "4826b38" }
kaspa-rpc-macros = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "4826b38" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "4826b38", features = ["wasm32-sdk"]}
kaspa-utils = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "4826b38" }
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "4826b38" }
kaspa-wallet-keys = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "4826b38" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "4826b38" }
paste = "1.0"
pyo3 = { version = "0.27.1", features = ['multiple-pymethods'] }
pyo3-async-runtimes = { version = "0.27.0", features = ['tokio-runtime'] }
pyo3-log = "0.13.2"
rand = "0.8.5"
secp256k1 = { version = "0.29.0", features = [
    "global-context",
    "rand-std",
    "serde",
] }
serde = "1.0.228"
serde-pyobject = "0.8.0"
thiserror = "2.0.17"
workflow-core = "0.18.0"
workflow-log = "0.18.0"
workflow-rpc = "0.18.0"
zeroize = { version = "1.6.0", default-features = false, features = ["alloc"] }
