[package]
name = "kaspa-python-sdk"
version = "1.1.0-rc2"
edition = "2024"

[lib]
name = "kaspa"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub-gen"
path = "src/bin/stub_gen.rs"

[dependencies]
ahash = "0.8.12"
bincode = "1.3.3"
faster-hex = "0.9.0"
futures = "0.3.31"
hex = "0.4.3"
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "1a2f98a" }
kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "1a2f98a" }
kaspa-consensus-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "1a2f98a" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "1a2f98a" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "1a2f98a" }
kaspa-notify = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "1a2f98a" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "1a2f98a" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "1a2f98a", features = ["wasm32-sdk"]}
kaspa-utils = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "1a2f98a" }
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "1a2f98a" }
kaspa-wallet-keys = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "1a2f98a" }
kaspa-wallet-pskt = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "1a2f98a" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "1a2f98a" }
paste = "1.0"
pyo3 = { version = "0.27.1", features = ['multiple-pymethods'] }
pyo3-async-runtimes = { version = "0.27.0", features = ['tokio-runtime'] }
pyo3-log = "0.13.2"
pyo3-stub-gen = "0.17.2"
rand = "0.8.5"
regex = "1"
secp256k1 = { version = "0.29.0", features = [
    "global-context",
    "rand-std",
    "serde",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde-pyobject = "0.8.0"
serde_json = "1.0.149"
thiserror = "2.0.17"
workflow-core = "0.18.0"
workflow-log = "0.18.0"
workflow-rpc = "0.18.0"
zeroize = { version = "1.6.0", default-features = false, features = ["alloc"] }
