[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kaspa"
version = "2.0.0.dev0"
description = "Kaspa Python SDK"
requires-python = ">=3.10,<=3.14"
readme = "README.md"
license = "ISC"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]
dependencies = []

[project.urls]
# "Source" = "https://github.com/aspectron/rusty-kaspa/tree/python/python"
# "Changelog" = "https://github.com/aspectron/rusty-kaspa/tree/python/python/CHANGELOG.md"

[package.metadata.maturin]
name = "kaspa"
description = "Kaspa Python SDK"

[tool.maturin]
name = "kaspa"
bindings = "pyo3"
features = [
    "pyo3/extension-module",
]
strip = true
include = [
    "LICENSE",
    "CHANGELOG.md"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mike>=2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]