[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kaspa"
version = "2.0.0.dev0"
description = "Kaspa Python SDK"
requires-python = ">=3.10,<=3.14"
readme = "README.md"
license = "ISC"
authors = [
    { name = "Kaspa developers" }
]
keywords = ["kaspa", "cryptocurrency", "blockchain", "blockdag", "sdk", "wallet", "rpc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/smartgoo/kaspa-python-sdk"
Repository = "https://github.com/smartgoo/kaspa-python-sdk"
Documentation = "https://smartgoo.github.io/kaspa-python-sdk/latest"
Changelog = "https://smartgoo.github.io/kaspa-python-sdk/latest/CHANGELOG/"
Issues = "https://github.com/smartgoo/kaspa-python-sdk/issues"

[project.optional-dependencies]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
docs = [
    "click==8.2.1", # click==8.3.1 breaks live reload of mkdocs
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mike>=2.1",
]

[tool.maturin]
bindings = "pyo3"
strip = true
include = [
    "LICENSE",
    "docs/CHANGELOG.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
